--- a/Manager_Menu.html
+++ b/Manager_Menu.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <nav class="navbar navbar-custom px-3">
-  <a href="Manager_Stock.html" class="brand">Ran A Han</a>
+  <a href="Index.html" class="brand">Ran A Han</a>
       <div class="d-flex align-items-center">
         <div class="text-row">
             <div class="text-col" >
@@ -33,7 +33,7 @@
     <div class="col-12 col-md-3 col-lg-2 sidebar">
       <h6>FEATURES</h6>
       <nav class="nav flex-column">
-        <a class="nav-link" href="Manager_Stock.html">Stock</a>
+        <a class="nav-link" href="Index.html">Stock</a>
         <a class="nav-link active" href="Manager_Menu.html">Menu</a>
         <a class="nav-link" href="Manager_Staff.html">Staff</a>
         <a class="nav-link" href="Manager_Promotion.html">Promotion</a>
