--- a/Manager_Menu.html
+++ b/Manager_Menu.html
@@ -46,7 +46,7 @@
         <!-- Toolbar -->
         <div class="d-flex mb-3">
           <input type="text" class="form-control w-25 me-2" placeholder="Search">
-          <button class="btn btn-light me-2">Add</button>
+          <button class="btn btn-light me-2" data-bs-toggle="modal" data-bs-target="#addMenuModal">Add</button>
           <button class="btn btn-light me-2">Edit</button>
           <select class="form-select w-auto me-2">
             <option>Category</option>
@@ -90,6 +90,77 @@
         </table>
 
     <!-- Full Staff Modal -->
+    <!-- Add Menu Modal -->
+<div class="modal fade" id="addMenuModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content p-4">
+
+      <!-- Header -->
+      <div class="modal-header border-0">
+        <h2 class="fw-bold">Add Menu</h2>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+      <!-- Body -->
+      <div class="modal-body">
+        <form id="addMenuForm">
+
+          <div class="mb-3 row">
+            <label class="col-sm-3 col-form-label fw-bold">Menu name :</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" id="menuName" required>
+            </div>
+          </div>
+
+          <div class="mb-3 row">
+            <label class="col-sm-3 col-form-label fw-bold">Description :</label>
+            <div class="col-sm-9">
+              <textarea class="form-control" id="menuDescription" rows="3"></textarea>
+            </div>
+          </div>
+
+          <div class="mb-3 row">
+            <label class="col-sm-3 col-form-label fw-bold">Price (THB) :</label>
+            <div class="col-sm-9">
+              <input type="number" class="form-control" id="menuPrice" required>
+            </div>
+          </div>
+
+          <div class="mb-3 row">
+            <label class="col-sm-3 col-form-label fw-bold">Menu ID :</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" id="menuId">
+            </div>
+          </div>
+
+          <div class="mb-3 row">
+            <label class="col-sm-3 col-form-label fw-bold">Type :</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" id="menuType">
+            </div>
+          </div>
+
+          <div class="mb-3 row">
+            <label class="col-sm-3 col-form-label fw-bold">Image :</label>
+            <div class="col-sm-9">
+              <div class="border rounded p-4 text-center">
+                <input class="form-control" type="file" id="menuImage" accept="image/png, image/jpeg">
+                <small class="text-muted">JPEG, PNG up to 50MB</small>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <!-- Footer -->
+      <div class="modal-footer border-0 justify-content-center">
+        <button type="button" class="btn btn-danger px-4" data-bs-dismiss="modal">Cancel</button>
+        <button type="submit" form="addMenuForm" class="btn btn-success px-4">Confirm</button>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 </body>
 <script src="Manager_Menuf.js"></script>   
