--- a/Manager_Menu.html
+++ b/Manager_Menu.html
@@ -42,7 +42,7 @@
 
       <!-- Main content -->
       <div class="col-10 p-4">
-        <h3 class="fw-bold">Staff Management</h3><br>
+        <h3 class="fw-bold">Menu Management</h3><br>
         <!-- Toolbar -->
         <div class="d-flex mb-3">
           <input type="text" class="form-control w-25 me-2" placeholder="Search">
@@ -91,76 +91,76 @@
 
     <!-- Full Staff Modal -->
     <!-- Add Menu Modal -->
-<div class="modal fade" id="addMenuModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-lg modal-dialog-centered">
-    <div class="modal-content p-4">
+  <div class="modal fade" id="addMenuModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content p-4">
 
-      <!-- Header -->
-      <div class="modal-header border-0">
-        <h2 class="fw-bold">Add Menu</h2>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
+        <!-- Header -->
+        <div class="modal-header border-0">
+          <h2 class="fw-bold">Add Menu</h2>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
 
-      <!-- Body -->
-      <div class="modal-body">
-        <form id="addMenuForm">
+        <!-- Body -->
+        <div class="modal-body">
+          <form id="addMenuForm">
 
-          <div class="mb-3 row">
-            <label class="col-sm-3 col-form-label fw-bold">Menu name :</label>
-            <div class="col-sm-9">
-              <input type="text" class="form-control" id="menuName" required>
-            </div>
-          </div>
-
-          <div class="mb-3 row">
-            <label class="col-sm-3 col-form-label fw-bold">Description :</label>
-            <div class="col-sm-9">
-              <textarea class="form-control" id="menuDescription" rows="3"></textarea>
-            </div>
-          </div>
-
-          <div class="mb-3 row">
-            <label class="col-sm-3 col-form-label fw-bold">Price (THB) :</label>
-            <div class="col-sm-9">
-              <input type="number" class="form-control" id="menuPrice" required>
-            </div>
-          </div>
-
-          <div class="mb-3 row">
-            <label class="col-sm-3 col-form-label fw-bold">Menu ID :</label>
-            <div class="col-sm-9">
-              <input type="text" class="form-control" id="menuId">
-            </div>
-          </div>
-
-          <div class="mb-3 row">
-            <label class="col-sm-3 col-form-label fw-bold">Type :</label>
-            <div class="col-sm-9">
-              <input type="text" class="form-control" id="menuType">
-            </div>
-          </div>
-
-          <div class="mb-3 row">
-            <label class="col-sm-3 col-form-label fw-bold">Image :</label>
-            <div class="col-sm-9">
-              <div class="border rounded p-4 text-center">
-                <input class="form-control" type="file" id="menuImage" accept="image/png, image/jpeg">
-                <small class="text-muted">JPEG, PNG up to 50MB</small>
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Menu name :</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="menuName" required>
               </div>
             </div>
-          </div>
-        </form>
-      </div>
 
-      <!-- Footer -->
-      <div class="modal-footer border-0 justify-content-center">
-        <button type="button" class="btn btn-danger px-4" data-bs-dismiss="modal">Cancel</button>
-        <button type="submit" form="addMenuForm" class="btn btn-success px-4">Confirm</button>
-      </div>
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Description :</label>
+              <div class="col-sm-9">
+                <textarea class="form-control" id="menuDescription" rows="3"></textarea>
+              </div>
+            </div>
 
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Price (THB) :</label>
+              <div class="col-sm-9">
+                <input type="number" class="form-control" id="menuPrice" required>
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Menu ID :</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="menuId">
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Type :</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="menuType">
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Image :</label>
+              <div class="col-sm-9">
+                <div class="border rounded p-4 text-center">
+                  <input class="form-control" type="file" id="menuImage" accept="image/png, image/jpeg">
+                  <small class="text-muted">JPEG, PNG up to 50MB</small>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+
+        <!-- Footer -->
+        <div class="modal-footer border-0 justify-content-center">
+          <button type="button" class="btn btn-danger px-4" data-bs-dismiss="modal">Cancel</button>
+          <button type="submit" form="addMenuForm" class="btn btn-success px-4">Confirm</button>
+        </div>
+
+      </div>
     </div>
   </div>
-</div>
 
 </body>
 <script src="Manager_Menuf.js"></script>   
