--- a/Manager_Promotion.html
+++ b/Manager_Promotion.html
@@ -43,12 +43,12 @@
 
       <!-- Main content -->
       <div class="col-10 p-4">
-        <h3 class="fw-bold">Stock Management</h3>
+        <h3 class="fw-bold">Promotion Management</h3>
 
         <!-- Search & Filter -->
         <div class="d-flex mb-3">
           <input type="text" class="form-control w-25 me-2" placeholder="Search">
-          <button class="btn btn-light me-2">Add</button>
+          <button class="btn btn-light me-2" data-bs-toggle="modal" data-bs-target="#addPromotionModal">Add</button>
           <select class="form-select w-auto">
             <option>Sort by</option>
           </select>
@@ -97,6 +97,81 @@
       </div>
     </div>
   </div>
+  <!-- Add Menu Modal -->
+<div class="modal fade" id="addPromotionModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content p-4">
+
+      <!-- Header -->
+      <div class="modal-header border-0">
+        <h2 class="fw-bold">Add Menu</h2>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+      <!-- Body -->
+      <div class="modal-body">
+        <form id="addMenuForm">
+
+          <div class="mb-3 row">
+            <label class="col-sm-3 col-form-label fw-bold">Promotion name :</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" id="menuName" required>
+            </div>
+          </div>
+
+          <div class="mb-3 row">
+            <label class="col-sm-3 col-form-label fw-bold">Description :</label>
+            <div class="col-sm-9">
+              <textarea class="form-control" id="menuDescription" rows="3"></textarea>
+            </div>
+          </div>
+
+          <div class="mb-3 row">
+            <label class="col-sm-3 col-form-label fw-bold">Discount :</label>
+            <div class="col-sm-9">
+              <input type="number" class="form-control" id="menuPrice" required>
+            </div>
+          </div>
+
+          <div class="mb-3 row">
+            <label class="col-sm-3 col-form-label fw-bold">Promotion ID :</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" id="menuId">
+            </div>
+          </div>
+
+          <div class="mb-3 row">
+            <label class="col-sm-3 col-form-label fw-bold">Status :</label>
+            <div class="col-sm-3">
+                <select id="statusSelect" class="form-select">
+                    <option value="active">Active</option>
+                    <option value="inactive">Inactive</option>
+                 </select>
+            </div>
+          </div>
+
+          <div class="mb-3 row">
+            <label class="col-sm-3 col-form-label fw-bold">Image :</label>
+            <div class="col-sm-9">
+              <div class="border rounded p-4 text-center">
+                <input class="form-control" type="file" id="menuImage" accept="image/png, image/jpeg">
+                <small class="text-muted">JPEG, PNG up to 50MB</small>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <!-- Footer -->
+      <div class="modal-footer border-0 justify-content-center">
+        <button type="button" class="btn btn-danger px-4" data-bs-dismiss="modal">Cancel</button>
+        <button type="submit" form="addMenuForm" class="btn btn-success px-4">Confirm</button>
+      </div>
+
+    </div>
+  </div>
+</div>
+
 </body>
 <script src="Manager_Stock.js"></script>   
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
