--- a/Manager_Staff.html
+++ b/Manager_Staff.html
@@ -46,8 +46,8 @@
         <!-- Toolbar -->
         <div class="d-flex mb-3">
           <input type="text" class="form-control w-25 me-2" placeholder="Search">
-          <button class="btn btn-light me-2">&nbsp;<span class="material-symbols-outlined">calendar_month</span></button>
-          <button class="btn btn-light me-2">Add</button>
+          <button class="btn btn-light me-2" data-bs-toggle="modal" data-bs-target="#staffScheduleModal">&nbsp;<span class="material-symbols-outlined">calendar_month</span></button>
+          <button class="btn btn-light me-2" data-bs-toggle="modal" data-bs-target="#addStaffModal">Add</button>
           <button class="btn btn-light me-2">Edit</button>
         </div>
 
@@ -203,9 +203,184 @@
         </div>
       </div>
     </div>
-
     </div>
   </div>
+      <!-- Add Staff Modal -->
+  <div class="modal fade" id="addStaffModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content p-4">
+
+        <!-- Header -->
+        <div class="modal-header border-0">
+          <h2 class="fw-bold">Add Staff</h2>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+
+        <!-- Body -->
+        <div class="modal-body">
+          <form id="addMenuForm">
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Fist Name :</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="menuName" required>
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Last Name :</label>
+              <div class="col-sm-9">
+                <textarea class="form-control" id="menuDescription" rows="3"></textarea>
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Email :</label>
+              <div class="col-sm-9">
+                <input type="number" class="form-control" id="menuPrice" required>
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Number :</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="menuId">
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Role :</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="menuType">
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Image :</label>
+              <div class="col-sm-9">
+                <div class="border rounded p-4 text-center">
+                  <input class="form-control" type="file" id="menuImage" accept="image/png, image/jpeg">
+                  <small class="text-muted">JPEG, PNG up to 50MB</small>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+
+        <!-- Footer -->
+        <div class="modal-footer border-0 justify-content-center">
+          <button type="button" class="btn btn-danger px-4" data-bs-dismiss="modal">Cancel</button>
+          <button type="submit" form="addMenuForm" class="btn btn-success px-4">Confirm</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <!-- Staff Schedule Modal -->
+  <div class="modal fade" id="staffScheduleModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content p-4">
+
+        <!-- Header -->
+        <div class="modal-header border-0">
+          <h2 class="fw-bold">Staff Schedule</h2>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+
+        <!-- Body -->
+        <div class="modal-body">
+
+          <!-- Search + Filters -->
+          <div class="d-flex justify-content-between mb-3">
+            <div class="input-group w-25">
+              <span class="input-group-text"><i class="bi bi-search"></i></span>
+              <input type="text" class="form-control" placeholder="Search Staff">
+            </div>
+
+            <div class="d-flex">
+              <select class="form-select me-2">
+                <option selected>Month August 2025</option>
+                <option>September 2025</option>
+                <option>October 2025</option>
+              </select>
+              <select class="form-select">
+                <option selected>Week 2nd Week</option>
+                <option>Week 1st Week</option>
+                <option>Week 3rd Week</option>
+                <option>Week 4th Week</option>
+              </select>
+            </div>
+          </div>
+
+          <!-- Schedule Table -->
+          <table class="table table-bordered text-center align-middle">
+            <thead class="table-light">
+              <tr>
+                <th>Name</th>
+                <th>Role</th>
+                <th>Mon</th>
+                <th>Tue</th>
+                <th>Wed</th>
+                <th>Thu</th>
+                <th>Fri</th>
+                <th>Sat</th>
+                <th>Sun</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>B. nambaone</td>
+                <td>Staff</td>
+                <td>09:00 – 21:00</td>
+                <td>09:00 – 15:00</td>
+                <td>15:00 – 21:00</td>
+                <td>OFF</td>
+                <td>09:00 – 15:00</td>
+                <td>15:00 – 21:00</td>
+                <td>15:00 – 21:00</td>
+              </tr>
+              <tr>
+                <td>A. Bae</td>
+                <td>Staff</td>
+                <td>OFF</td>
+                <td>15:00 – 21:00</td>
+                <td>09:00 – 15:00</td>
+                <td>09:00 – 21:00</td>
+                <td>15:00 – 21:00</td>
+                <td>09:00 – 15:00</td>
+                <td>09:00 – 15:00</td>
+              </tr>
+              <tr>
+                <td>T. Kob</td>
+                <td>Chef</td>
+                <td>09:00 – 21:00</td>
+                <td>09:00 – 21:00</td>
+                <td>09:00 – 21:00</td>
+                <td>09:00 – 21:00</td>
+                <td>09:00 – 21:00</td>
+                <td>09:00 – 21:00</td>
+                <td>09:00 – 21:00</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <small class="text-muted">
+            OFF = Day Off, 09:00 – 15:00 = Morning Shift, 15:00 – 21:00 = Evening Shift, 
+            09:00 – 21:00 = Double Shift
+          </small>
+
+        </div>
+
+        <!-- Footer -->
+        <div class="modal-footer border-0 justify-content-center">
+          <button type="button" class="btn btn-danger px-4" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-dark px-4">Edit</button>
+          <button type="button" class="btn btn-success px-4">Confirm</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 <script src="Manager_Staff.js"></script>   
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
