--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <nav class="navbar navbar-custom px-3">
-    <a href="Index.html" class="brand">Ran A Han</a>
+    <a href="Indexg.html" class="brand">Ran A Han</a>
         <div class="d-flex align-items-center">
           <div class="text-row">
               <div class="text-col" >
@@ -48,7 +48,7 @@
         <!-- Search & Filter -->
         <div class="d-flex mb-3">
           <input type="text" class="form-control w-25 me-2" placeholder="Search">
-          <button class="btn btn-light me-2">Add</button>
+          <button class="btn btn-light me-2" data-bs-toggle="modal" data-bs-target="#addStockModal">Add</button>
           <select class="form-select w-auto me-2">
             <option>Category</option>
           </select>
@@ -115,58 +115,150 @@
       </div>
     </div>
   </div>
-  <!-- Product Detail Modal -->
-<div class="modal fade" id="productModal" tabindex="-1">
-  <div class="modal-dialog modal-lg modal-dialog-centered">
-    <div class="modal-content p-4">
+    <!-- Product Detail Modal -->
+  <div class="modal fade" id="productModal" tabindex="-1">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content p-4">
 
-      <div class="modal-header border-0">
-        <h2 class="fw-bold" id="productTitle">Product Detail</h2>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
+        <div class="modal-header border-0">
+          <h2 class="fw-bold" id="productTitle">Product Detail</h2>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
 
-      <div class="modal-body">
-        <div class="row">
-          <!-- Left side -->
-          <div class="col-md-6">
-            <h5 class="fw-bold">Order Information</h5>
-            <p id="orderId"></p>
-            <p id="stockInDate"></p>
-            <p id="lastSoldDate"></p>
-            <p id="expiredDate"></p>
+        <div class="modal-body">
+          <div class="row">
+            <!-- Left side -->
+            <div class="col-md-6">
+              <h5 class="fw-bold">Order Information</h5>
+              <p id="orderId"></p>
+              <p id="stockInDate"></p>
+              <p id="lastSoldDate"></p>
+              <p id="expiredDate"></p>
 
-            <h5 class="fw-bold mt-3">Product Details</h5>
-            <p id="productName"></p>
-            <p id="quantity"></p>
-            <p id="unitPrice"></p>
-            <p id="totalPrice"></p>
-            <p id="storage"></p>
+              <h5 class="fw-bold mt-3">Product Details</h5>
+              <p id="productName"></p>
+              <p id="quantity"></p>
+              <p id="unitPrice"></p>
+              <p id="totalPrice"></p>
+              <p id="storage"></p>
 
-            <h5 class="fw-bold mt-3">Notes</h5>
-            <p id="notes"></p>
-          </div>
+              <h5 class="fw-bold mt-3">Notes</h5>
+              <p id="notes"></p>
+            </div>
 
-          <!-- Right side -->
-          <div class="col-md-6">
-            <h5 class="fw-bold">Stock Status</h5>
-            <p id="remaining"></p>
-            <p>Status: <span id="statusBadge" class="badge"></span></p>
+            <!-- Right side -->
+            <div class="col-md-6">
+              <h5 class="fw-bold">Stock Status</h5>
+              <p id="remaining"></p>
+              <p>Status: <span id="statusBadge" class="badge"></span></p>
 
-            <h5 class="fw-bold mt-3">Sales / Supplier Info</h5>
-            <p id="supplier"></p>
-            <p id="contact"></p>
+              <h5 class="fw-bold mt-3">Sales / Supplier Info</h5>
+              <p id="supplier"></p>
+              <p id="contact"></p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="modal-footer border-0 justify-content-center">
-        <button class="btn btn-danger">Delete</button>
-        <button class="btn btn-dark">Edit</button>
-        <button class="btn btn-success">Confirm</button>
+        <div class="modal-footer border-0 justify-content-center">
+          <button class="btn btn-danger">Delete</button>
+          <button class="btn btn-dark">Edit</button>
+          <button class="btn btn-success">Confirm</button>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Add Modal -->
+  </div>
+    <div class="modal fade" id="addStockModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content p-4">
+
+        <!-- Header -->
+        <div class="modal-header border-0">
+          <h2 class="fw-bold">Add Stock</h2>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+
+        <!-- Body -->
+        <div class="modal-body">
+          <form id="addMenuForm">
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Stock name :</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="menuName" required>
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Quantity :</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="menuName" required>
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Unit Price :</label>
+              <div class="col-sm-9">
+                <input type="number" class="form-control" id="menuPrice" required>
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Storage Location :</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="menuId">
+              </div>
+            </div>
+            
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Order ID :</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="orderId">
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Stock In Date :</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="orderId">
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Sales Channel :</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="orderId">
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Contact :</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control" id="orderId">
+              </div>
+            </div>
+
+            <div class="mb-3 row">
+              <label class="col-sm-3 col-form-label fw-bold">Notes :</label>
+              <div class="col-sm-9">                
+                  <textarea class="form-control" id="menuDescription" rows="3"></textarea>
+              </div>
+            </div>
+
+          </form>
+        </div>
+
+        <!-- Footer -->
+        <div class="modal-footer border-0 justify-content-center">
+          <button type="button" class="btn btn-danger px-4" data-bs-dismiss="modal">Cancel</button>
+          <button type="submit" form="addMenuForm" class="btn btn-success px-4">Confirm</button>
+        </div>
+
       </div>
     </div>
   </div>
-</div>
 
 </body>
 <script src="Manager_Stock.js"></script>   
